<resources>
    <string name="app_name">weather Forecast</string>
    <string name="title_home">weather</string>
    <string name="title_dashboard">fav</string>
    <string name="title_notifications">alarm</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_maps">Map</string>
    <!-- Preference Titles -->
    <!-- Preference Titles -->
    <string name="messages_header">Location Mode</string>
    <string name="temp_unit">Temperature unite and Wind speed</string>
    <string name="language">Language</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="location_title">Location</string>
    <string name="unite_title">unit</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sync_header">Sync</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fav">fav</string>
    <string name="fav_after">fav_after</string>
    <string name="deleteEntry">do you want delete this location ?</string>
    <string name="TitleDelete">Delete Location</string>
    <string name="TitleDeleteAlarm">"Do you want cancel this alarm ? "</string>
    <string name="alarm_massage">send notification about current weather alert  </string>
    <string name="alarm_off">Alarm off</string>
    <string name="cancelAlarm">Alarm cancel</string>
    <string name="languages">language</string>
    <string name="today">Today</string>
    <string name="days">7Days</string>
    <string name="alarm_on">Alarm On</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="first">Add location from setting</string>
    <string name="welcome">Welcome</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="event">Event</string>
    <string name="save">save</string>
    <string name="favmsg">There are no locations in favorites</string>
    <string name="cancelAlarmSound">Cancel</string>
    <string name="not" translatable="false">Notification</string>
    <string name="sound" translatable="false">Sound Alarm</string>

</resources>