<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mad41.weatherForecast.ui.weather.WeatherFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_Weather" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.mad41.weatherForecast.ui.favorite.FavoriteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favLocations" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mad41.weatherForecast.ui.alarm.AlarmFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.mad41.weatherForecast.ui.setting.SettingFragment1"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>